--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
     volumes:
       - ./src:/app
     ports:
-      - "3000:3000"
+      - 3000:3000
     environment: 
-    - NODE_ENV=development
+    - NODE_ENV=production
